--- a/designApp/default.html
+++ b/designApp/default.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>MarketHealth</title>
+		<title>PriceMyMRI</title>
 		
-		<link rel="stylesheet/less" type="text/css" href="css/styles.less" />
+		
 		<link rel="stylesheet" href="css/bootstrap.min.css" type="text/css" media="screen" />
 		<link rel="stylesheet" href="css/jquery-ui.css" type="text/css" media="screen" />
+		<link rel="stylesheet" type="text/css" href="css/styles.css" />
 		<meta content="text/html;charset=UTF-8" http-equiv="content-type"/>
 
 		<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
@@ -27,21 +28,18 @@
 	<div class="navbar navbar-fixed-top">
 		<div class="navbar-inner">
 			<div class="container">
-				<a class="brand" href="#">MarketHealth</a>
+				<a class="brand" href="#">PriceMyMRI</a>
 				<ul class="nav">
 					<li class="active"><a href="#">Home</a></li>
-					<li><a href="about.html">About</a></li>
+					<li><a href="why.html">Why?</a></li>
+					<li><a href="MRI.html">MRI?</a></li>
 				</ul>
 			</div>
 		</div>
 	</div>
-	<div class="row">
-		<div class="span12" id="main">
-			
-			bla bla bla<br/>
-			sds<br/>
-			dfsd<br/>
-			dasf
+	<div id="main">
+		<div id="content">
+			<h1>PriceMyMRI</h1>
 		</div>
 	</div>
 	
