--- a/designApp/default.html
+++ b/designApp/default.html
@@ -37,9 +37,20 @@
 			</div>
 		</div>
 	</div>
-	<div id="main">
-		<div id="content">
-			<h1>PriceMyMRI</h1>
+	<div class="container">
+		<div class="hero-unit">
+		        <h1>PriceMyMRI</h1>
+		        <p>This is a template for a simple marketing or informational website. It includes a large callout
+			 called the hero unit and three supporting pieces of content. Use it as a starting point to 
+			create something more unique.</p>
+		        <p><a class="btn btn-primary btn-large">Learn more &raquo;</a></p>
+		</div>
+		<div id="cost">
+			An MRI costs:
+			<table class="table cost">
+				<tr class="cost-header"><td>USA</td><td>Utah</td></tr>
+				<tr><td>$350-400</td><td>$300-350</td></tr>
+			</table>
 		</div>
 	</div>
 	
