--- a/designApp/default.html
+++ b/designApp/default.html
@@ -5,7 +5,6 @@
 		
 		
 		<link rel="stylesheet" href="css/bootstrap.min.css" type="text/css" media="screen" />
-		<link rel="stylesheet" href="css/jquery-ui.css" type="text/css" media="screen" />
 		<meta content="text/html;charset=UTF-8" http-equiv="content-type"/>
 		
 		<script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?sensor=false"></script>
@@ -72,6 +71,7 @@
 			</div>
 		</div>
 	</div>
+    <!-- -->
 	<div class="container">
 		<div id="cost">An MRI costs:
 		<table class="table cost">
@@ -100,7 +100,7 @@
 			<div id="mapInterface"></div>
 		</div>
 		<div id="list" class="tab-pane">
-		<table class="table table-striped">
+		<table class="list table table-striped">
 		<tr><th>Price</th><th>State</th><th>City</th><th>Doctor</th></tr>
 		<tr><td>$672</td><td>UT</td><td>Salt Lake City</td><td>Dr. Bob</td></tr>
 		<tr><td>$672</td><td>UT</td><td>Salt Lake City</td><td>Dr. Bob</td></tr>
@@ -110,6 +110,8 @@
 		</div>
 		</div>
 	</div>
+
+    <script type='text/javascript' src="js/data.js"></script>
 	
 </body>
 </html>
