got map working

--- a/designApp/default.html
+++ b/designApp/default.html
@@ -72,7 +72,13 @@
 		</div>
 	</div>
     <!-- -->
+	
 	<div class="container">
+		<div class="hero-unit">
+		        <h1>PriceMyMRI</h1>
+		        <p>This is a template for a simple marketing or informational website. It includes a large callout called the hero unit and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
+		        <p><a class="btn btn-primary btn-large" href="about.html">Learn more &raquo;</a></p>
+		</div>
 		<div id="cost">An MRI costs:
 		<table class="table cost">
 		<tbody>
