--- a/designApp/default.html
+++ b/designApp/default.html
@@ -80,43 +80,46 @@
 		        <p><a class="btn btn-primary btn-large" href="about.html">Learn more &raquo;</a></p>
 		</div>
 		<div id="cost">An MRI costs:
-		<table class="table cost">
-		<tbody>
-		<tr class="cost-header">
-		<th>USA</th>
-		<th>Utah</th>
-		</tr>
-		<tr>
-		<td>$350-400</td>
-		<td>$300-350</td>
-		</tr>
-		</tbody>
-		</table>
+			<table class="table cost">
+				<tbody>
+					<tr class="cost-header">
+						<th>USA</th>
+						<th>Utah</th>
+					</tr>
+					<tr>
+						<td>$350-400</td>
+						<td>$300-350</td>
+					</tr>
+				</tbody>
+			</table>
 		</div>
 		<div class="row">
-		<div class="span3">
-		<ul class="nav nav-pills nav-stacked" style="font-size: 19px;">
-			<li class="active"><a href="#map" data-toggle="pill">Map</a></li>
-			<li><a href="#list" data-toggle="pill">List</a></li>
-		</ul>
+			<div class="span3">
+				<ul class="nav nav-pills nav-stacked" style="font-size: 19px;">
+					<li class="active"><a href="#map" data-toggle="pill">Map</a></li>
+					<li><a href="#list" data-toggle="pill">List</a></li>
+				</ul>
+			</div>
+			<div class="span9">
+				<div class="tab-content" style="height: 600px;">
+					<div id="map" class="tab-pane active">
+						<div id="mapInterface"></div>
+					</div>
+					<div id="list" class="tab-pane">
+						<table class="list table table-striped">
+							<tr><th>Price</th><th>State</th><th>City</th><th>Doctor</th></tr>
+							<tr><td>$672</td><td>UT</td><td>Salt Lake City</td><td>Dr. Bob</td></tr>
+							<tr><td>$672</td><td>UT</td><td>Salt Lake City</td><td>Dr. Bob</td></tr>
+						</table>
+					</div>
+				</div>
+			</div>
 		</div>
-		<div class="span9">
-		<div class="tab-content" style="height: 600px;">
-		<div id="map" class="tab-pane active">
-			<div id="mapInterface"></div>
-		</div>
-		<div id="list" class="tab-pane">
-		<table class="list table table-striped">
-		<tr><th>Price</th><th>State</th><th>City</th><th>Doctor</th></tr>
-		<tr><td>$672</td><td>UT</td><td>Salt Lake City</td><td>Dr. Bob</td></tr>
-		<tr><td>$672</td><td>UT</td><td>Salt Lake City</td><td>Dr. Bob</td></tr>
-		</table>
-		</div>
-		</div>
-		</div>
-		</div>
+		<hr/>
+		<footer>&copy;2012 PriceMyMRI</footer>
 	</div>
-
+	<br/><br/>
+	
     <script type='text/javascript' src="js/data.js"></script>
 	
 </body>
