--- a/designApp/default.html
+++ b/designApp/default.html
@@ -101,15 +101,20 @@
 		</div>
 		<div id="list" class="tab-pane">
 		<table class="list table table-striped">
-		<tr><th>Price</th><th>State</th><th>City</th><th>Doctor</th></tr>
-		<tr><td>$672</td><td>UT</td><td>Salt Lake City</td><td>Dr. Bob</td></tr>
-		<tr><td>$672</td><td>UT</td><td>Salt Lake City</td><td>Dr. Bob</td></tr>
+            <tr class="header"><th>Price</th><th>State</th><th>City</th><th>Doctor</th></tr>
 		</table>
+
 		</div>
 		</div>
 		</div>
 		</div>
 	</div>
+
+    <div id="templates">
+        <table>
+            <tr class="listRow"><td class="amount">$672</td><td class="city">Salt Lake City</td><td class="state">UT</td><td class="doctor">Dr. Bob</td></tr>
+        </table>
+    </div>
 
     <script type='text/javascript' src="js/data.js"></script>
 	
