--- a/designApp/default.html
+++ b/designApp/default.html
@@ -87,8 +87,8 @@
 						<th>Utah</th>
 					</tr>
 					<tr>
-						<td>$350-400</td>
-						<td>$300-350</td>
+						<td class="us">$<span class="min">350</span>-<span class="max">400</span></td>
+						<td class="local">$<span class="min">350</span>-<span class="max">400</span></td>
 					</tr>
 				</tbody>
 			</table>
