--- a/designApp/add.html
+++ b/designApp/add.html
@@ -64,9 +64,10 @@
 			<div class="container">
 				<a class="brand" href="#">PriceMyMRI</a>
 				<ul class="nav">
-					<li class="active"><a href="#">Home</a></li>
+					<li><a href="default.html">Home</a></li>
 					<li><a href="why.html">Why?</a></li>
 					<li><a href="MRI.html">MRI?</a></li>
+					<li class="active"><a href="add.html">Add Your Results</a></li>
 				</ul>
 			</div>
 		</div>
@@ -75,43 +76,16 @@
 	
 	<div class="container">
 		<div class="hero-unit">
-			<img src="img/logo_big.png">
+			<img src="img/logo_sm.png" style="padding-top: 8px;">
 		        <h1>PriceMyMRI</h1>
-		        <p>This is a template for a simple marketing or informational website. It includes a large callout called the hero unit and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
-		        <p><a class="btn btn-primary btn-large" href="about.html">Learn more &raquo;</a></p>
 		</div>
-		<div id="cost">An MRI costs:
-			<table class="table cost">
-				<tbody>
-					<tr class="cost-header">
-						<th>USA</th>
-						<th>Utah</th>
-					</tr>
-					<tr>
-						<td class="us">$<span class="min">350</span>-<span class="max">400</span></td>
-						<td class="local">$<span class="min">350</span>-<span class="max">400</span></td>
-					</tr>
-				</tbody>
-			</table>
-		</div>
+		
 		<div class="row">
 			<div class="span3">
-				<ul class="nav nav-pills nav-stacked" style="font-size: 19px;">
-					<li class="active"><a href="#map" data-toggle="pill">Map</a></li>
-					<li><a href="#list" data-toggle="pill">List</a></li>
-				</ul>
+				
 			</div>
 			<div class="span9">
-				<div class="tab-content" style="height: 600px;">
-					<div id="map" class="tab-pane active">
-						<div id="mapInterface"></div>
-					</div>
-					<div id="list" class="tab-pane">
-                    <table class="list table table-striped">
-                        <tr class="header"><th>Price</th><th>State</th><th>City</th><th>Doctor</th></tr>
-                    </table>
-					</div>
-				</div>
+				
 			</div>
 		</div>
 		<hr/>
@@ -119,13 +93,6 @@
 	</div>
 	<br/><br/>
 	
-    <div id="templates">
-        <table>
-            <tr class="listRow"><td class="amount">$672</td><td class="city">Salt Lake City</td><td class="state">UT</td><td class="doctor">Dr. Bob</td></tr>
-        </table>
-    </div>
-
-    <script type='text/javascript' src="js/data.js"></script>
 	
 </body>
 </html>
