--- a/designApp/default.html
+++ b/designApp/default.html
@@ -20,8 +20,9 @@
 				<a class="brand" href="#">PriceMyMRI</a>
 				<ul class="nav">
 					<li class="active"><a href="#">Home</a></li>
-					<li><a href="why.html">Why?</a></li>
+					<li><a href="about.html">Why?</a></li>
 					<li><a href="MRI.html">MRI?</a></li>
+					<li><a href="add.html">Add Your Results</a></li>
 				</ul>
 			</div>
 		</div>
