--- a/designApp/add.html
+++ b/designApp/add.html
@@ -65,7 +65,7 @@
 				<a class="brand" href="#">PriceMyMRI</a>
 				<ul class="nav">
 					<li><a href="default.html">Home</a></li>
-					<li><a href="why.html">Why?</a></li>
+					<li><a href="about.html">Why?</a></li>
 					<li><a href="MRI.html">MRI?</a></li>
 					<li class="active"><a href="add.html">Add Your Results</a></li>
 				</ul>
@@ -85,7 +85,92 @@
 				
 			</div>
 			<div class="span9">
-				
+				<form class="form-horizontal">
+					<fieldset>
+						<legend>How much was your MRI?</legend>
+						          <div class="control-group">
+						            <label class="control-label" for="amount">Amount</label>
+						            <div class="controls">
+						              <input type="text" class="input-xlarge" id="amount">
+						              <p class="help-block"></p>
+						            </div>
+						          </div>
+						          <div class="control-group">
+						            <label class="control-label" for="city">City</label>
+						            <div class="controls">
+						              <input type="text" class="input-xlarge" id="city">
+						            </div>
+						          </div>
+						          <div class="control-group">
+						            <label class="control-label" for="state">State</label>
+						            <div class="controls">
+						              <select id="state">
+						              		<option value="AK">AK</option>
+											<option value="AL">AL</option>
+											<option value="AR">AR</option>
+											<option value="AZ">AZ</option>
+											<option value="CA">CA</option>
+											<option value="CO">CO</option>
+											<option value="CT">CT</option>
+											<option value="DC">DC</option>
+											<option value="DE">DE</option>
+											<option value="FL">FL</option>
+											<option value="GA">GA</option>
+											<option value="HI">HI</option>
+											<option value="IA">IA</option>
+											<option value="ID">ID</option>
+											<option value="IL">IL</option>
+											<option value="IN">IN</option>
+											<option value="KS">KS</option>
+											<option value="KY">KY</option>
+											<option value="LA">LA</option>
+											<option value="MA">MA</option>
+											<option value="MD">MD</option>
+											<option value="ME">ME</option>
+											<option value="MI">MI</option>
+											<option value="MN">MN</option>
+											<option value="MO">MO</option>
+											<option value="MS">MS</option>
+											<option value="MT">MT</option>
+											<option value="NC">NC</option>
+											<option value="ND">ND</option>
+											<option value="NE">NE</option>
+											<option value="NH">NH</option>
+											<option value="NJ">NJ</option>
+											<option value="NM">NM</option>
+											<option value="NV">NV</option>
+											<option value="NY">NY</option>
+											<option value="OH">OH</option>
+											<option value="OK">OK</option>
+											<option value="OR">OR</option>
+											<option value="PA">PA</option>
+											<option value="RI">RI</option>
+											<option value="SC">SC</option>
+											<option value="SD">SD</option>
+											<option value="TN">TN</option>
+											<option value="TX">TX</option>
+											<option value="UT">UT</option>
+											<option value="VA">VA</option>
+											<option value="VT">VT</option>
+											<option value="WA">WA</option>
+											<option value="WI">WI</option>
+											<option value="WV">WV</option>
+											<option value="WY">WY</option>
+						              </select>
+						            </div>
+						          </div>
+									<div class="control-group">
+							            <label class="control-label" for="city">Center</label>
+							            <div class="controls">
+							              <input type="text" class="input-xlarge" id="center">
+							            </div>
+							        </div>
+									<div class="form-actions">
+									    <button type="submit" class="btn btn-primary">Submit</button>
+									    <button type="reset" class="btn">Clear</button>
+									</div>
+					</fieldset>
+				</form>
 			</div>
 		</div>
 		<hr/>
