but button, map stuff

--- a/designApp/default.html
+++ b/designApp/default.html
@@ -4,10 +4,12 @@
 		<meta content="text/html;charset=UTF-8" http-equiv="content-type"/>
 		<title>PriceMyMRI</title>
 		
-		<link rel="stylesheet" href="css/bootstrap.min.css" type="text/css" media="screen" />
-		
 		<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+
+        <!-- boostrap requires jquery -->
+		<link rel="stylesheet" href="css/bootstrap.min.css" type="text/css" media="screen" />
 		<script type="text/javascript" src="js/bootstrap.min.js"></script>
+		
 		
 		<link rel="stylesheet/less" type="text/css" href="css/styles.less">
 		<script src="http://lesscss.googlecode.com/files/less-1.0.21.min.js"></script>
@@ -50,6 +52,7 @@
 				</tbody>
 			</table>
 		</div>
+        <a class="btn btn-primary btn-large addButton">How Much Was Yours?</a>
 		<div class="row">
 			<div class="span3">
 				<ul class="nav nav-pills nav-stacked" style="font-size: 19px;">
@@ -81,6 +84,7 @@
         </table>
     </div>
 
+    <script type='text/javascript' src="js/style.js"></script>
     <script type='text/javascript' src="js/data.js"></script>
 
 
