--- a/designApp/about.html
+++ b/designApp/about.html
@@ -19,13 +19,13 @@
 	<div class="navbar navbar-fixed-top">
 		<div class="navbar-inner">
 			<div class="container">
-				<a class="brand" href="#">PriceMyMRI</a>
+				<a class="brand" href="/default.html">PriceMyMRI</a>
 				<ul class="nav">
-					<li><a href="default.html">Home</a></li>
-					<li><a href="about.html">Why?</a></li>
+					<li><a href="/default.html">Home</a></li>
+					<li class="active"><a href="about.html">Why?</a></li>
 					<li><a href="MRI.html">MRI?</a></li>
 					<li><a href="add.html">Add Your Results</a></li>
-					<li class="active"><a href="compare.html">Compare Results</a></li>
+					<li><a href="compare.html">Compare Results</a></li>
 				</ul>
 			</div>
 		</div>
