--- a/designApp/add.html
+++ b/designApp/add.html
@@ -22,12 +22,13 @@
 	  <div class="navbar navbar-fixed-top">
 		  <div class="navbar-inner">
 			  <div class="container">
-				  <a class="brand" href="#">PriceMyMRI</a>
-				  <ul class="nav">
-					  <li><a href="default.html">Home</a></li>
+				<a class="brand" href="/default.html">PriceMyMRI</a>
+				<ul class="nav">
+                      <li><a href="/default.html">Home</a></li>
 					  <li><a href="about.html">Why?</a></li>
 					  <li><a href="MRI.html">MRI?</a></li>
 					  <li class="active"><a href="add.html">Add Your Results</a></li>
+					  <li><a href="compare.html">Compare Results</a></li>
 				  </ul>
 			  </div>
 		  </div>
