--- a/designApp/compare.html
+++ b/designApp/compare.html
@@ -19,9 +19,9 @@
 	<div class="navbar navbar-fixed-top">
 		<div class="navbar-inner">
 			<div class="container">
-				<a class="brand" href="#">PriceMyMRI</a>
+				<a class="brand" href="/default.html">PriceMyMRI</a>
 				<ul class="nav">
-					<li><a href="default.html">Home</a></li>
+					<li><a href="/default.html">Home</a></li>
 					<li><a href="about.html">Why?</a></li>
 					<li><a href="MRI.html">MRI?</a></li>
 					<li><a href="add.html">Add Your Results</a></li>
