--- a/designApp/default.html
+++ b/designApp/default.html
@@ -15,12 +15,13 @@
 	<div class="navbar navbar-fixed-top">
 		<div class="navbar-inner">
 			<div class="container">
-				<a class="brand" href="#">PriceMyMRI</a>
+				<a class="brand" href="/default.html">PriceMyMRI</a>
 				<ul class="nav">
-					<li class="active"><a href="#">Home</a></li>
+					<li class="active"><a href="/default.html">Home</a></li>
 					<li><a href="about.html">Why?</a></li>
 					<li><a href="MRI.html">MRI?</a></li>
 					<li><a href="add.html">Add Your Results</a></li>
+					<li><a href="compare.html">Compare Results</a></li>
 				</ul>
 			</div>
 		</div>
