--- a/designApp/default.html
+++ b/designApp/default.html
@@ -30,7 +30,7 @@
     <!-- -->
 
     <div id="stripe">
-        <h1>There&rsquo;s nothing funny about high medical costs</h1>
+        <h1><a href="about">There&rsquo;s nothing funny about high medical costs</a></h1>
         <div class="machine">
             <img src="img/mri.png">
             <div class="bubbles"></div>
@@ -43,7 +43,7 @@
     </div>
 
 	
-	<div class="container">
+	<div class="container main">
 
         <!-- Big button -->
         <a class="btn btn-primary btn-large addButton animateLoad fromTop" href="add">How Much Was Yours?</a>
@@ -102,12 +102,20 @@
     <script type="text/javascript" src="js/bootstrap.min.js"></script>
 
     <script type='text/javascript' src="js/style.js"></script>
+    <script type='text/javascript' src="js/application.js"></script>
     <script type='text/javascript' src="js/data.js"></script>
 
 
     <!-- Load map last (change to load on demand eventually. AMD?) -->
     <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?sensor=false"></script>
     <script type='text/javascript' src="js/map.js"></script>
+
+    <script> 
+        $(function() {
+            console.log("GRR", mh, mh.map)
+            mh.map.drawMap("#mapInterface")
+        })
+    </script>  
 	
 </body>
 </html>
