--- a/designApp/add.html
+++ b/designApp/add.html
@@ -34,7 +34,7 @@
 		  </div>
 	  </div>
 	
-	  <div class="container">
+	  <div class="main container">
 		  <div class="hero-unit">
 			  <img src="img/logo_sm.png" style="padding-top: 8px;">
 		    <h1>PriceMyMRI</h1>
