--- a/designApp/about.html
+++ b/designApp/about.html
@@ -33,10 +33,10 @@
     <!-- -->
 	
 	<div class="container">
-		<!-- <div class="hero-unit">
+		<div class="hero-unit">
 			<img src="img/logo_sm.png" style="padding-top: 8px;">
 		        <h1>PriceMyMRI</h1>
-		</div> -->
+		</div>
 		<h2>Community generated service, offering individual comparative MRI pricing while providing qualified candidates to qualified care centers.</h2>
 		<div class="about">
 		<h1>About Us</h1>
