--- a/designApp/add.html
+++ b/designApp/add.html
@@ -20,19 +20,20 @@
 	</head>
   <body>
 	  <div class="navbar navbar-fixed-top">
-		  <div class="navbar-inner">
-			  <div class="container">
-				<a class="brand" href="/default.html">PriceMyMRI</a>
+		<div class="navbar-inner">
+			<div class="container">
+				<a class="brand" href="/default.html">
+				<img src="img/logo-icon.png" width="16" height="16"/>
+				PriceMyMRI</a>
 				<ul class="nav">
-                      <li><a href="/default.html">Home</a></li>
-					  <li><a href="about.html">Why?</a></li>
-					  <li><a href="MRI.html">MRI?</a></li>
-					  <li class="active"><a href="add.html">Add Your Results</a></li>
-					  <li><a href="compare.html">Compare Results</a></li>
-				  </ul>
-			  </div>
-		  </div>
-	  </div>
+					<li><a href="/default.html">Home</a></li>
+					<li><a href="about.html">About</a></li>
+					<li class="active"><a href="add.html">Add Your Results</a></li>
+					<li><a href="compare.html">Compare Results</a></li>
+				</ul>
+			</div>
+		</div>
+	</div>
 	
 	  <div class="container">
 		  <div class="hero-unit">
