--- a/designApp/default.html
+++ b/designApp/default.html
@@ -20,7 +20,7 @@
 				PriceMyMRI</a>
 				<ul class="nav">
 					<li class="active"><a href="/default.html">Home</a></li>
-					<li><a href="about.html">Why?</a></li>
+					<li><a href="about.html">About</a></li>
 					<li><a href="add.html">Add Your Results</a></li>
 					<li><a href="compare.html">Compare Results</a></li>
 				</ul>
