--- a/designApp/add.html
+++ b/designApp/add.html
@@ -12,6 +12,7 @@
 		<script type="text/javascript" src="js/bootstrap-alert.js"></script>
 		<script type="text/javascript" src="js/application.js"></script>
 		<script type="text/javascript" src="js/add.js"></script>
+        <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?sensor=false"></script>
 		<script type="text/javascript" src="js/map.js"></script>
 		
 		
