--- a/designApp/default.html
+++ b/designApp/default.html
@@ -83,7 +83,7 @@
 
             <div id="list" class="animateLoad">
                 <table class="list table table-striped">
-                    <tr class="header"><th>Price</th><th>State</th><th>City</th><th>Doctor</th></tr>
+                    <tr class="header"><th>Price</th><th>Name</th><th>Location</th><th>Center</th></tr>
                 </table>
             </div>
 		</div>
@@ -94,7 +94,7 @@
 	
     <div id="templates">
         <table>
-            <tr class="listRow"><td class="amount">$672</td><td class="city">Salt Lake City</td><td class="state">UT</td><td class="doctor">Dr. Bob</td></tr>
+            <tr class="listRow"><td>$<span class="amount">672</span></td><td class="name">Sean Hess</td><td><span class="city">Provo</span>, <span class="state">UT</span></td><td class="center">The clinic</td></tr>
         </table>
     </div>
 
