--- a/designApp/default.html
+++ b/designApp/default.html
@@ -48,7 +48,8 @@
         <!-- Big button -->
         <a class="btn btn-primary btn-large addButton animateLoad fromTop" href="add">How Much Was Yours?</a>
 
-		<div id="cost" class="animateLoad fromBottom">An MRI costs:
+		<div id="cost" class="animateLoad fromBottom infobox">
+            <div class="lbl">MRIs cost</div>
 			<table class="table cost">
 				<tbody>
 					<tr class="cost-header">
@@ -56,8 +57,8 @@
 						<th>Utah</th>
 					</tr>
 					<tr>
-						<td class="us">$<span class="min">350</span>-<span class="max">400</span></td>
-						<td class="local">$<span class="min">350</span>-<span class="max">400</span></td>
+						<td class="us">$<span class="min">350</span>-$<span class="max">400</span></td>
+						<td class="local">$<span class="min">350</span>-$<span class="max">400</span></td>
 					</tr>
 				</tbody>
 			</table>
@@ -74,8 +75,6 @@
             </ul>
             -->
 
-
-            <h3>MRI Prices</h3>
 
             <div id="map">
                 <div id="mapInterface"></div>
@@ -113,6 +112,10 @@
     <script> 
         $(function() {
             mh.map.drawMap("#mapInterface")
+
+            $("#cost tr").live("click", function() {
+                window.location = "/compare"
+            })
         })
     </script>  
 	
